syntax = "proto2";

option csharp_namespace = "Connection.Proto.Distributor";

package proto;

service Distributor {
	rpc GetRoute (ConnectedGraph) returns (Route);
	rpc GetLowerBound (ConnectedGraph) returns (LowerBound);
}

message Route {
	required bytes data = 1;
}

message LowerBound {
	required float lower = 1;
}

message ConnectedGraph {
	required bytes data = 1;
}
